--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/material-nextjs": "^6.1.6",
     "next": "15.0.2",
     "react": "19.0.0-rc-5c56b873-20241107",
-    "react-dom": "19.0.0-rc-5c56b873-20241107"
+    "react-cookie": "^7.2.2",
+    "react-dom": "19.0.0-rc-5c56b873-20241107",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -26,11 +28,12 @@
     "@types/bun": "^1.1.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/universal-cookie": "^3.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "prettier": "^3.3.3",
-    "gts": "^6.0.2",
+    "gts": "^5.3.1",
     "eslint-config-next": "15.0.2"
   }
 }
