--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bluefirex/color-ts": "^1.3.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -16,8 +17,9 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
-    "@schedule-x/events-service": "^2.6.0",
-    "@schedule-x/ical": "^2.6.0",
+    "@schedule-x/calendar": "^2.6.0",
+    "@schedule-x/current-time": "^2.6.0",
+    "@schedule-x/event-modal": "^2.6.0",
     "@schedule-x/react": "^2.4.2",
     "@schedule-x/theme-default": "^2.6.0",
     "next": "15.0.2",
