--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -4,13 +4,15 @@ on:
   push:
 
 env:
-  IMAGE_NAME: herobone/dhbw-stundenplan
+  REGISTRY: herobone
+  IMAGE_NAME: dhbw-stundenplan
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: write
       attestations: write
       id-token: write
 
@@ -27,7 +29,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
           tags: |
@@ -52,6 +54,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
+        id: push
         uses: docker/build-push-action@v6
         with:
           context: .
