--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
+    "axios": "^1.7.8",
     "next": "15.0.2",
     "react": "19.0.0-rc-5c56b873-20241107",
-    "react-dom": "19.0.0-rc-5c56b873-20241107"
+    "react-dom": "19.0.0-rc-5c56b873-20241107",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
     "@types/bun": "^1.1.13",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "prettier": "^3.3.3",
+    "eslint-config-next": "15.0.2",
     "gts": "^6.0.2",
-    "eslint-config-next": "15.0.2"
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
