--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dhbw-verzeichnis",
-  "version": "0.1.1",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
